--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"C_Cpp.errorSquiggles": "disabled",
 	"files.associations": {
 		"thread": "cpp",
-		"memory": "cpp"
+		"memory": "cpp",
+		"chrono": "cpp"
 	}
 }
